[SPKT-33] Added fifth test

--- a/src/Sandbox.ipynb
+++ b/src/Sandbox.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "beb50d6d",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "49                  Wróć do folderu        cd"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "1f776d5a",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2/2 [==============================] - 0s 2ms/step - loss: 2.5875 - accuracy: 0.4200\n"
+      "2/2 [==============================] - 0s 4ms/step - loss: 2.5875 - accuracy: 0.4200\n"
      ]
     },
     {
@@ -452,7 +452,7 @@
        "[2.5874805450439453, 0.41999998688697815]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,6 +463,76 @@
     "y = pd.get_dummies(data[[\"command\"]]).values\n",
     "\n",
     "model.evaluate(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "df73465a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 1, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 1, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 1, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 1, 0, 0, 0, 0, 0, 0]], dtype=uint8)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
@@ -486,204 +556,204 @@
      "output_type": "stream",
      "text": [
       "Dzień dobry\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Dobry wieczór\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Cześć\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Hej\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Siema\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Elo, co tam\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Witaj\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Witam\n",
-      "Recognized: open\n",
-      "Correct: write\n",
+      "Recognized: 1\n",
+      "Correct: 4\n",
       "\n",
       "Czołem\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Joł\n",
-      "Recognized: greeting\n",
-      "Correct: write\n",
+      "Recognized: 0\n",
+      "Correct: 4\n",
       "\n",
       "Jak się masz\n",
-      "Recognized: write\n",
-      "Correct: write\n",
+      "Recognized: 4\n",
+      "Correct: 4\n",
       "\n",
       "Otwórz aplikację spotify\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Uruchom grę\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Otwórz menadżera zadań\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Uruchom wiersz poleceń\n",
-      "Recognized: greeting\n",
-      "Correct: save\n",
+      "Recognized: 0\n",
+      "Correct: 5\n",
       "\n",
       "Włącz chrome\n",
-      "Recognized: write\n",
-      "Correct: save\n",
+      "Recognized: 4\n",
+      "Correct: 5\n",
       "\n",
       "Otwórz notatnik\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Włącz mi aplikacje notatnik\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Uruchom przeglądarkę\n",
-      "Recognized: cd\n",
-      "Correct: save\n",
+      "Recognized: 7\n",
+      "Correct: 5\n",
       "\n",
       "Uruchom kalkulator\n",
-      "Recognized: save\n",
-      "Correct: save\n",
+      "Recognized: 5\n",
+      "Correct: 5\n",
       "\n",
       "Odpal kalkulator\n",
-      "Recognized: cd\n",
-      "Correct: save\n",
+      "Recognized: 7\n",
+      "Correct: 5\n",
       "\n",
       "Otwórz panel sterowania\n",
-      "Recognized: greeting\n",
-      "Correct: save\n",
+      "Recognized: 0\n",
+      "Correct: 5\n",
       "\n",
       "Otwórz ustawienia systemu\n",
-      "Recognized: greeting\n",
-      "Correct: save\n",
+      "Recognized: 0\n",
+      "Correct: 5\n",
       "\n",
       "Otwórz galerię zdjęć\n",
-      "Recognized: open\n",
-      "Correct: save\n",
+      "Recognized: 1\n",
+      "Correct: 5\n",
       "\n",
       "Zamknij okno\n",
-      "Recognized: cd\n",
-      "Correct: close\n",
+      "Recognized: 7\n",
+      "Correct: 2\n",
       "\n",
       "Zamknij folder\n",
-      "Recognized: open\n",
-      "Correct: close\n",
+      "Recognized: 1\n",
+      "Correct: 2\n",
       "\n",
       "Zamknij ten plik\n",
-      "Recognized: save\n",
-      "Correct: close\n",
+      "Recognized: 5\n",
+      "Correct: 2\n",
       "\n",
       "Zamknij aplikację\n",
-      "Recognized: save\n",
-      "Correct: close\n",
+      "Recognized: 5\n",
+      "Correct: 2\n",
       "\n",
       "Wyłącz aplikację\n",
-      "Recognized: write\n",
-      "Correct: close\n",
+      "Recognized: 4\n",
+      "Correct: 2\n",
       "\n",
       "Nastaw budzik na ośmą rano\n",
-      "Recognized: write\n",
-      "Correct: greeting\n",
+      "Recognized: 4\n",
+      "Correct: 0\n",
       "\n",
       "Obudź mnie o czwartej rano\n",
-      "Recognized: write\n",
-      "Correct: greeting\n",
+      "Recognized: 4\n",
+      "Correct: 0\n",
       "\n",
       "Włącz alarm na siedemnastą\n",
-      "Recognized: greeting\n",
-      "Correct: greeting\n",
+      "Recognized: 0\n",
+      "Correct: 0\n",
       "\n",
       "Uruchom alarm na dziesiątą rano\n",
-      "Recognized: greeting\n",
-      "Correct: greeting\n",
+      "Recognized: 0\n",
+      "Correct: 0\n",
       "\n",
       "Ustaw budzik na dziewiątą\n",
-      "Recognized: greeting\n",
-      "Correct: greeting\n",
+      "Recognized: 0\n",
+      "Correct: 0\n",
       "\n",
       "Zrób notatkę\n",
-      "Recognized: save\n",
-      "Correct: cd\n",
+      "Recognized: 5\n",
+      "Correct: 7\n",
       "\n",
       "Zanotuj mi ten tekst\n",
-      "Recognized: write\n",
-      "Correct: cd\n",
+      "Recognized: 4\n",
+      "Correct: 7\n",
       "\n",
       "Zanotuj tekst\n",
-      "Recognized: open\n",
-      "Correct: cd\n",
+      "Recognized: 1\n",
+      "Correct: 7\n",
       "\n",
       "Napisz polecenie w terminalu\n",
-      "Recognized: save\n",
-      "Correct: cd\n",
+      "Recognized: 5\n",
+      "Correct: 7\n",
       "\n",
       "Zapisz plik\n",
-      "Recognized: save\n",
-      "Correct: create\n",
+      "Recognized: 5\n",
+      "Correct: 6\n",
       "\n",
       "Zapisz mi ten plik\n",
-      "Recognized: write\n",
-      "Correct: create\n",
+      "Recognized: 4\n",
+      "Correct: 6\n",
       "\n",
       "Zapisz zmiany\n",
-      "Recognized: save\n",
-      "Correct: create\n",
+      "Recognized: 5\n",
+      "Correct: 6\n",
       "\n",
       "Zatwierdź zmiany\n",
-      "Recognized: greeting\n",
-      "Correct: create\n",
+      "Recognized: 0\n",
+      "Correct: 6\n",
       "\n",
       "Nadpisz plik\n",
-      "Recognized: save\n",
-      "Correct: create\n",
+      "Recognized: 5\n",
+      "Correct: 6\n",
       "\n",
       "Utwórz nowy plik\n",
-      "Recognized: write\n",
-      "Correct: alarm\n",
+      "Recognized: 4\n",
+      "Correct: 3\n",
       "\n",
       "Utwórz nowy folder\n",
-      "Recognized: alarm\n",
-      "Correct: alarm\n",
+      "Recognized: 3\n",
+      "Correct: 3\n",
       "\n",
       "Stwórz nowy plik\n",
-      "Recognized: write\n",
-      "Correct: alarm\n",
+      "Recognized: 4\n",
+      "Correct: 3\n",
       "\n",
       "Stwórz nowy folder\n",
-      "Recognized: alarm\n",
-      "Correct: alarm\n",
+      "Recognized: 3\n",
+      "Correct: 3\n",
       "\n",
       "Wejdź do folderu\n",
-      "Recognized: greeting\n",
-      "Correct: open\n",
+      "Recognized: 0\n",
+      "Correct: 1\n",
       "\n",
       "Otwórz folder\n",
-      "Recognized: open\n",
-      "Correct: open\n",
+      "Recognized: 1\n",
+      "Correct: 1\n",
       "\n",
       "Wróć do folderu\n",
-      "Recognized: write\n",
-      "Correct: open\n",
+      "Recognized: 4\n",
+      "Correct: 1\n",
       "\n"
      ]
     }
@@ -692,13 +762,33 @@
     "for i, x in enumerate(X_raw):\n",
     "    correct_index = y[i].tolist().index(max(y[i]))\n",
     "    recognized_index = y_predicted[i].numpy().tolist().index(max(y_predicted[i]))\n",
-    "    print(f\"{x}\\nRecognized: {labels[recognized_index]}\\nCorrect: {labels[correct_index]}\\n\")"
+    "    print(f\"{x}\\nRecognized: {recognized_index}\\nCorrect: {correct_index}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d1edb456",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "Predict = np.array([nlp(x).vector for x in [\"Hej\"]])\n",
+    "y_predicted = model(Predict)\n",
+    "recognized_index = y_predicted[0].numpy().tolist().index(max(y_predicted[0]))\n",
+    "print(recognized_index)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1edb456",
    "metadata": {},
    "outputs": [],
    "source": []
